--- a/retro-calculator/Base.lproj/LaunchScreen.storyboard
+++ b/retro-calculator/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +17,52 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="Hjo-5n-auv">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="RQ3-L6-ZpG">
+                                <rect key="frame" x="-5" y="457" width="631" height="148"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="RQ3-L6-ZpG" secondAttribute="height" multiplier="631:148" id="ghF-dT-PHS"/>
+                                    <constraint firstAttribute="height" constant="180" id="q8N-tS-7UZ"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="sq0-33-l1G">
+                                <rect key="frame" x="180" y="170" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="dO3-u7-yTA"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="B3c-8P-CEd">
+                                <rect key="frame" x="142" y="60" width="317" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="317" id="Qe1-ya-sFF"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="sq0-33-l1G" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="18t-hX-CVL"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Hjo-5n-auv" secondAttribute="bottom" id="1rH-Kr-Miy"/>
+                            <constraint firstItem="RQ3-L6-ZpG" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="B6E-2c-wry"/>
+                            <constraint firstItem="B3c-8P-CEd" firstAttribute="centerX" secondItem="Hjo-5n-auv" secondAttribute="centerX" id="Gfv-gx-jzM"/>
+                            <constraint firstAttribute="trailing" secondItem="Hjo-5n-auv" secondAttribute="trailing" id="IiT-2P-ogd"/>
+                            <constraint firstItem="RQ3-L6-ZpG" firstAttribute="bottom" secondItem="Ze5-6b-2t3" secondAttribute="bottom" constant="4" id="J07-xF-unn"/>
+                            <constraint firstItem="RQ3-L6-ZpG" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="TKR-Hx-i3p"/>
+                            <constraint firstAttribute="trailing" secondItem="RQ3-L6-ZpG" secondAttribute="trailing" id="V4J-JZ-03p"/>
+                            <constraint firstItem="sq0-33-l1G" firstAttribute="top" secondItem="B3c-8P-CEd" secondAttribute="top" id="VZ9-hA-msB"/>
+                            <constraint firstItem="Hjo-5n-auv" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="dhi-to-FpN"/>
+                            <constraint firstItem="Hjo-5n-auv" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="l2i-YY-b3J"/>
+                            <constraint firstItem="sq0-33-l1G" firstAttribute="top" secondItem="B3c-8P-CEd" secondAttribute="bottom" id="mk0-EF-702"/>
+                            <constraint firstItem="B3c-8P-CEd" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="40" id="ui0-GL-hfg"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="mk0-EF-702"/>
+                                <exclude reference="TKR-Hx-i3p"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +70,10 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
